# sheetwise

./: .buildinfo  CHANGELOG.md  README.md  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: contributing.doctree  examples.doctree  index.doctree  installation.doctree  license.doctree  quickstart.doctree
.doctrees/api/: index.doctree  sheetwise.chain.doctree  sheetwise.classifiers.doctree  sheetwise.cli.doctree  sheetwise.compressor.doctree  sheetwise.core.doctree  sheetwise.data_types.doctree  sheetwise.detectors.doctree  sheetwise.doctree  sheetwise.encoders.doctree  sheetwise.extractors.doctree  sheetwise.formula_parser.doctree  sheetwise.loaders.doctree  sheetwise.privacy.doctree  sheetwise.smart_tables.doctree  sheetwise.utils.doctree  sheetwise.visualizer.doctree  sheetwise.workbook.doctree
.doctrees/user_guide/: cli.doctree  compression.doctree  encoding.doctree  formulas.doctree  tables.doctree  visualization.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/sheetwise/: chain.html  classifiers.html  cli.html  compressor.html  core.html  data_types.html  detectors.html  encoders.html  extractors.html  formula_parser.html  loaders.html  privacy.html  smart_tables.html  utils.html  visualizer.html  workbook.html
_sources/api/: index.rst.txt  sheetwise.chain.rst.txt  sheetwise.classifiers.rst.txt  sheetwise.cli.rst.txt  sheetwise.compressor.rst.txt  sheetwise.core.rst.txt  sheetwise.data_types.rst.txt  sheetwise.detectors.rst.txt  sheetwise.encoders.rst.txt  sheetwise.extractors.rst.txt  sheetwise.formula_parser.rst.txt  sheetwise.privacy.rst.txt  sheetwise.rst.txt  sheetwise.smart_tables.rst.txt  sheetwise.utils.rst.txt  sheetwise.visualizer.rst.txt  sheetwise.workbook.rst.txt
api/: index.html  sheetwise.chain.html  sheetwise.classifiers.html  sheetwise.cli.html  sheetwise.compressor.html  sheetwise.core.html  sheetwise.data_types.html  sheetwise.detectors.html  sheetwise.encoders.html  sheetwise.extractors.html  sheetwise.formula_parser.html  sheetwise.html  sheetwise.loaders.html  sheetwise.privacy.html  sheetwise.smart_tables.html  sheetwise.utils.html  sheetwise.visualizer.html  sheetwise.workbook.html
docs/: index.html  styles.css
docs/source/: conf.py
src/sheetwise/: core.py
tests/: test_core.py
user_guide/: cli.html  compression.html  encoding.html  formulas.html  tables.html  visualization.html
