# PEP 621 metadata for uv-compatible packaging
[project]
name = "sheetwise"
version = "2.2.0"
description = "A Python package for encoding spreadsheets for Large Language Models, implementing the SpreadsheetLLM research framework"
readme = "README.md"
requires-python = ">=3.8.1,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Khushiyant Chauhan", email = "khushiyant@example.com" }
]
keywords = ["spreadsheet", "llm", "encoding", "compression", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "matplotlib>=3.6.0,<4.0.0",
    "requests>=2.28.0,<3.0.0",
    "pillow>=10.0.0,<11.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "rich>=14.1.0,<15.0.0",
]

[project.urls]
Homepage = "https://github.com/Khushiyant/sheetwise"
Repository = "https://github.com/Khushiyant/sheetwise"
Documentation = "https://khushiyant.github.io/sheetwise"

[project.scripts]
sheetwise = "sheetwise.cli:main"

# Optional dependency groups (install with `.[dev]` or `.[test]`)
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "jupyter>=1.0.0,<2.0.0",
]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"


# Hatch build configuration for src/ layout
[tool.hatch.build.targets.wheel]
packages = ["src/sheetwise"]


# Optional: uv convenience for dev sync
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sheetwise"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
